# ucc

./: .clangd  .gitignore  configure.ac  cuda_lt.sh
config/m4/: cuda.m4  maca.m4
src/: Makefile.am
src/components/ec/cuda/: ec_cuda.c  ec_cuda_executor_interruptible.c
src/components/ec/cuda/kernel/: Makefile.am  ec_cuda_executor.cu  ec_cuda_half_sm52.h
src/components/ec/maca/: Makefile.am  ec_maca.c  ec_maca.h  ec_maca_executor.c  ec_maca_executor.h  ec_maca_executor_interruptible.c  ec_maca_executor_persistent.c  ec_maca_executor_persistent_wait.c
src/components/ec/maca/kernel/: Makefile.am  ec_maca_executor.cu  ec_maca_reduce.cu  ec_maca_reduce_ops.h  ec_maca_wait_kernel.cu
src/components/mc/: ucc_mc.c
src/components/mc/base/: ucc_mc_base.c
src/components/mc/maca/: Makefile.am  mc_maca.c  mc_maca.h
src/components/tl/cuda/: tl_cuda_topo.c
src/components/tl/nccl/: tl_nccl.h  tl_nccl_coll.c
src/components/tl/ucp/: tl_ucp.c
src/core/: ucc_coll.c  ucc_global_opts.h
src/ucc/api/: ucc.h
src/utils/arch/: maca_def.h
test/gtest/: Makefile.am
test/gtest/coll/: test_allreduce.cc  test_alltoall.cc  test_alltoallv.cc  test_reduce.cc
test/gtest/core/: test_mc_reduce.cc  test_mc_reduce.h
tools/perf/: Makefile.am  ucc_perftest.cc  ucc_pt_benchmark.cc  ucc_pt_coll.cc  ucc_pt_comm.cc  ucc_pt_config.cc  ucc_pt_config.h  ucc_pt_maca.cc  ucc_pt_maca.h
